--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.11",
+    "mongoose-paginate-v2": "^1.3.14",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
